--- a/backoffice/package.json
+++ b/backoffice/package.json
@@ -11,8 +11,11 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@mui/base": "^5.0.0-alpha.117",
+    "axios": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1"
   },
@@ -33,6 +36,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.1.1",
     "prettier": "^2.8.4",
+    "tailwindcss": "^3.2.6",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vitest": "^0.28.4"
